Fixed an issue with spacing in the mobile viewing of the homepage

--- a/main.css
+++ b/main.css
@@ -251,6 +251,10 @@ img {
     padding-top: 15px;
     padding-bottom: 15px;
   }
+  .Pad{
+    padding-top: 15%;
+    padding-bottom: 15%;
+  }
   .toggle-button{
     display: flex;
   }
@@ -310,6 +314,10 @@ img {
     padding-right: 13%;
     font-size: 18px;        /* vw = viewpoint width which will scale with window size*/ 
   }
+  .Pad{
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
   body{
     margin: 0;
     padding: 0;
@@ -331,6 +339,10 @@ img {
     padding-left: 16%;
     padding-right: 16%;
     font-size: 22px;        /* vw = viewpoint width which will scale with window size*/
+  }
+  .Pad{
+    padding-top: 5%;
+    padding-bottom: 5%;
   }
   body{
     margin: 0;
